# browse_servo

./: .credo.exs  .formatter.exs  .gitignore  CHANGELOG.md  LICENSE  README.md  checksum-Elixir.BrowseServo.Native.exs  cliff.toml  mise.toml  mix.exs
.github/: cliff-release.toml
.github/workflows/: ci.yml  release.yml
config/: config.exs  test.exs
lib/: browse_servo.ex  lightpanda.ex  servox.ex
lib/browse_servo/: browse_backend.ex  browser.ex  browser_pool.ex  native.ex  page.ex  screenshot.ex  telemetry.ex
lib/lightpanda/: .Elixir.Lightpanda.Native.zig  application.ex  binary.ex  browser.ex  cli.ex  command.ex  context.ex  fetch_result.ex  http.ex  mcp.ex  native.ex  page.ex  runner.ex
lib/lightpanda/cdp/: client.ex
lib/mix/tasks/: version.ex
lib/servox/: application.ex  browse_backend.ex  browser.ex  browser_pool.ex  native.ex  page.ex  screenshot.ex
native/browse_servo_native/: Cargo.toml
native/browse_servo_native/src/: lib.rs
native/servox_native/: Cargo.toml
native/servox_native/.cargo/: config.toml
native/servox_native/src/: lib.rs
test/: browse_servo_test.exs  servox_test.exs  test_helper.exs
test/browse_servo/: browser_test.exs  native_test.exs  page_test.exs  telemetry_test.exs
test/lightpanda/: binary_test.exs  cli_test.exs  command_test.exs  page_test.exs
test/servox/: browser_test.exs  native_test.exs  page_test.exs
test/support/: native_stub.ex  screenshot_stub.ex
