[package]
name = "browse_servo_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
dpi = "0.1"
rustler = { version = "0.37.0", default-features = false, features = ["derive"] }
servo = { version = "0.1.0", package = "servo", default-features = false, features = ["js_jit"] }
url = "2.5"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
